--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 matplotlib==3.3.2
 moviepy==1.0.3
 numpy==1.19.2
-pandas==1.1.3
+pandas
 Pillow==8.4.0
 PsychoPy==2021.2.3
-setuptools==50.3.1.post20201107
+setuptools==53.1.0
 tobii_research==1.9.0
 websocket_client==1.2.3
